# CHEHAB_FHE_Compiler

./: .gitignore  CMakeLists.txt  hamming_dist.err  polynomials_results.csv  results.csv  run_all_jobs.sh  run_benchmarks.py  run_box_blur.sh  run_dot_product.sh  run_gx_kernel.sh  run_gy_kernel.sh  run_hamming_dist.sh  run_l2_distance.sh  run_lin_reg.sh  run_matrix_mul.sh  run_poly_reg.sh  run_roberts_cross.sh  run_sobel.sh
benchmarks/box_blur/: box_blur.cpp  fhe_io_example.txt
benchmarks/dot_product/: CMakeLists.txt  dot_product.cpp  fhe_io_example.txt
benchmarks/dot_product/he/: CMakeLists.txt
benchmarks/gx_kernel/: fhe_io_example.txt  gx_kernel.cpp
benchmarks/gy_kernel/: CMakeLists.txt  fhe_io_example.txt  gy_kernel.cpp
benchmarks/gy_kernel/he/: CMakeLists.txt
benchmarks/hamming_dist/: CMakeLists.txt  fhe_io_example.txt  hamming_dist.cpp
benchmarks/hamming_dist/he/: CMakeLists.txt  utils.hpp
benchmarks/l2_distance/: fhe_io_example.txt  l2_distance.cpp
benchmarks/lin_reg/: fhe_io_example.txt  lin_reg.cpp
benchmarks/manual_benchmark/: CMakeLists.txt  fhe_io_example.txt  manual_benchmark.cpp
benchmarks/matrix_mul/: fhe_io_example.txt  matrix_mul.cpp
benchmarks/max/: max.cpp
benchmarks/poly_reg/: fhe_io_example.txt  poly_reg.cpp
benchmarks/polynomials_coyote/: bench.cpp  polynomials_coyote.cpp
benchmarks/roberts_cross/: CMakeLists.txt  fhe_io_example.txt  roberts_cross.cpp
benchmarks/roberts_cross/he/: CMakeLists.cpp  utils.cpp
benchmarks/sobel/: fhe_io_example.txt  sobel.cpp
benchmarks/sort/: sort.cpp
benchmarks/unstruct_benc/: CMakeLists.txt  benchmark.cpp  generated_expression.txt  number_tree_generator  number_tree_generator.cpp  script.py  unstructured_code  unstructured_code.cpp
benchmarks/unstruct_benc/he/: CMakeLists.txt  main.cpp
egraphs/src/: config.rs  cost.rs  extractor.rs  lib.rs  macros.rs  main.rs  rewrite.rs  rules.rs  rules_1.rs  rules_2.rs  rules_3.rs  runner.rs  runner_old.rs  veclang.rs
egraphs_simplification/src/: main.rs
src/fheco/: fheco.hpp
src/fheco/dsl/: benchmark_types.cpp  benchmark_types.hpp  compiler.cpp  compiler.hpp  compiler_back.cpp  compiler_backup.cpp
src/fheco/util/: quantifier.cpp
